--- a/canvasshader/src/main/res/layout/fragment_bitmap.xml
+++ b/canvasshader/src/main/res/layout/fragment_bitmap.xml
@@ -65,6 +65,15 @@
             android:layout_weight="1"
             android:text="@string/redial"
             />
+
+        <RadioButton
+            android:id="@+id/rb_sweep"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/sweep"/>
+
+
     </RadioGroup>
 
 
@@ -93,6 +102,12 @@
         android:layout_margin="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
+    <com.mz.sanfen.canvasshader.custom.SweepView
+        android:layout_below="@id/rg_show"
+        android:visibility="gone"
+        android:id="@+id/sv"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
