--- a/lazyfragment/src/main/res/layout/fragment_other.xml
+++ b/lazyfragment/src/main/res/layout/fragment_other.xml
@@ -2,13 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mz.sanfen.lazyfragment.OneFragment">
-
-    <TextView
-        android:id="@+id/one_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    tools:context="com.mz.sanfen.lazyfragment.OtherFragment">
     <FrameLayout
         android:id="@+id/one_frame"
         android:layout_width="match_parent"
