--- a/lazyfragment/src/main/res/layout/content_other.xml
+++ b/lazyfragment/src/main/res/layout/content_other.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/one_text"
+        android:id="@+id/other_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
