--- a/ipc/src/main/res/layout/activity_home.xml
+++ b/ipc/src/main/res/layout/activity_home.xml
@@ -30,4 +30,9 @@
         android:layout_below="@id/Messenger"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/Socket"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
